[workspace]
members = ["strand-derive"]

[package]
name = "roped"
description = "a libary for simple cli"
license = "MIT OR Apache-2.0"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsr = "0.3.1"
strand-derive = { path = "./strand-derive", version = "0.5.0"}
