[lib]
proc-macro = true

[package]
name = "bundle-derive"
description = "derive macro for a bundle in rope"
license = "MIT OR Apache-2.0"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsr = "0.1.1"
syn = "1.0"
quote = "1.0"