[lib]
proc-macro = true

[package]
name = "strand-derive"
description = "derive macro for a strand in rope"
license = "MIT OR Apache-2.0"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.78"
syn = {version = "2.0.52"}
quote = "1.0.35"